fix/align-cta

--- a/src/adapters/primary/react/app.scss
+++ b/src/adapters/primary/react/app.scss
@@ -486,6 +486,7 @@ label{
     padding:1.5rem 1rem;
     margin:1rem 0rem;
     border-bottom: 1px solid $gray-500;
+    text-align: center;
     .motivation-title{
         max-width: 500px;
         margin-left: auto;
